feat(dist): multiplatform ci